Refactored:applied pagination to  sort by price api
